# squeezeboxlite

./: .gitignore  ChangeLog  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  squeezeboxlite.c
src/lib/: Makefile.am  squeezelite.h
src/lib/dsd2pcm/: Makefile.am
